--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "homepage": "https://thestrongestluknight.com",
   "private": true,
-  "dependencies": {
+  "devDependencies": {
     "@react-spring/parallax": "^9.2.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -12,20 +12,27 @@
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
+    "@types/aos": "^3.0.3",
+    "@types/country-flag-icons": "^1.2.0",
+    "@types/react-scrollspy": "^3.3.3",
+    "@types/webpack-env": "^1.16.0"
+  },
+  "dependencies": {
     "aos": "^2.3.4",
     "classnames": "^2.3.1",
     "country-flag-icons": "^1.2.10",
-    "gh-pages": "^3.2.2",
-    "immutable": "*",
+    "gh-pages": "^3.2.3",
+    "immutable": "4.0.0-rc.12",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.0",
     "react-masonry-css": "^1.0.16",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-scroll-parallax": "^2.4.0",
     "react-scrollspy": "^3.4.3",
     "react-scrollspy-navigation": "^1.0.2",
+    "react-spring": "^8.0.27",
     "react-tooltip": "^4.2.21",
     "react-use-scroll-indicator": "^1.1.1",
     "typescript": "^4.3.2",
@@ -56,14 +63,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "peerDependencies": {
-    "react-spring": "^8.0.27"
-  },
-  "devDependencies": {
-    "@types/aos": "^3.0.3",
-    "@types/country-flag-icons": "^1.2.0",
-    "@types/react-scrollspy": "^3.3.3",
-    "@types/webpack-env": "^1.16.0"
   }
 }
